tests/files/lexer_tests/should_fail/035.cmdr
// Illegal character in variable name (ascii 2)
myvar = 2;